[gd_scene load_steps=14 format=4 uid="uid://t3caxcjn1jnm"]

[ext_resource type="Script" uid="uid://xets4w4lanby" path="res://scripts/menu/MainMenu.gd" id="1_nl8w3"]
[ext_resource type="Texture2D" uid="uid://m1k1vqwlgwd6" path="res://assets/menu/playNormal.png" id="2_3rkf3"]
[ext_resource type="TileSet" uid="uid://d3iwboanudjiu" path="res://tileSets/Z1.tres" id="2_qgo02"]
[ext_resource type="Texture2D" uid="uid://d31ytq6umovm3" path="res://assets/menu/playhover.png" id="3_hj162"]
[ext_resource type="Texture2D" uid="uid://clw3aqmmbgos" path="res://assets/menu/quitNormal.png" id="4_hj162"]
[ext_resource type="Texture2D" uid="uid://c2dxpn23ioidd" path="res://assets/menu/soundOnNormal.png" id="6_d4hu8"]
[ext_resource type="Texture2D" uid="uid://bxnixqfs867ga" path="res://assets/menu/soundOnHoverl.png" id="7_p1nwe"]
[ext_resource type="Texture2D" uid="uid://b4mooyp7q6ajd" path="res://assets/menu/soundOffNormal.png" id="8_prbor"]
[ext_resource type="Texture2D" uid="uid://bmnffqm1sia6j" path="res://assets/menu/exitHover.png" id="8_vovv2"]
[ext_resource type="FontFile" uid="uid://dadcerr3es0j0" path="res://assets/fonts/OldeTome.ttf" id="9_vovv2"]
[ext_resource type="AudioStream" uid="uid://ckllomsw3308" path="res://assets/sounds/577017__nezuai__ui-sound-12.wav" id="10_1k4da"]
[ext_resource type="AudioStream" uid="uid://cswet0j64pxym" path="res://assets/sounds/Shadows Beneath.mp3" id="11_bbqo6"]

[sub_resource type="LabelSettings" id="LabelSettings_1k4da"]
font = ExtResource("9_vovv2")
font_size = 150
font_color = Color(0.350973, 0.617143, 1, 1)
outline_size = 20
outline_color = Color(0, 0, 0, 1)
shadow_size = 10
shadow_color = Color(0, 0, 0, 1)
shadow_offset = Vector2(15, 10)

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_nl8w3")

[node name="bkg" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAAAAAAAgACAAIAAAAAAAEAAgACAAIAAAAAAAIAAgACAAIAAAAAAAMAAgACAAIAAAAAAAQAAgACAAIAAAABAAUAAgACAAIAAAABAAYAAgACAAIAAAABAAcAAgACAAIAAAACAAcAAgACAAIAAAACAAgAAgACAAIAAAADAAkAAgACAAIAAAADAAoAAgACAAIAAAAEAAoAAgACAAIAAAAEAAsAAgACAAEAAAAFAAsAAgACAAEAAAAGAAsAAgACAAEAAAAHAAsAAgACAAEAAAAIAAoAAgACAAIAAAAJAAoAAgACAAIAAAAKAAoAAgACAAIAAAALAAoAAgACAAIAAAAMAAoAAgACAAIAAAANAAkAAgACAAIAAAAOAAkAAgACAAIAAAAPAAkAAgACAAIAAAAQAAgAAgACAAIAAAARAAgAAgACAAIAAAASAAgAAgAMAAIAAAASAAcAAgACAAIAAAASAAYAAgACAAIAAAARAAYAAgACAAIAAAAQAAYAAgACAAIAAAAPAAUAAgACAAIAAAAOAAUAAgACAAIAAAANAAQAAgACAAIAAAAMAAQAAgACAAIAAAALAAQAAgACAAIAAAAKAAQAAgACAAIAAAAJAAQAAgACAAIAAAAIAAMAAgACAAIAAAAHAAMAAgACAAIAAAAGAAMAAgACAAIAAAAFAAMAAgACAAIAAAAEAAMAAgACAAIAAAADAAMAAgACAAIAAAACAAMAAgACAAIAAAAEAAQAAgACAAIAAAAFAAQAAgACAAIAAAAGAAQAAgACAAIAAAAHAAUAAgACAAIAAAAIAAUAAgACAAIAAAAJAAYAAgACAAIAAAAJAAcAAgACAAIAAAAIAAcAAgACAAIAAAAHAAcAAgACAAIAAAAGAAgAAgACAAIAAAAHAAgAAgACAAIAAAAIAAgAAgACAAIAAAAJAAgAAgACAAIAAAAKAAgAAgACAAIAAAALAAgAAgACAAIAAAAMAAgAAgACAAIAAAANAAcAAgACAAIAAAAOAAcAAgACAAIAAAAPAAcAAgACAAIAAAAMAAcAAgACAAIAAAALAAcAAgACAAIAAAAKAAcAAgACAAIAAAAGAAcAAgACAAIAAAAFAAcAAgACAAIAAAAEAAgAAgACAAIAAAADAAgAAgACAAIAAAABAAgAAgACAAIAAAAAAAgAAgACAAIAAAAFAAgAAgACAAIAAAANAAgAAgACAAIAAAAOAAgAAgACAAIAAAAPAAgAAgACAAIAAAAJAAkAAgACAAIAAAAIAAkAAgACAAIAAAAHAAkAAgACAAIAAAAGAAkAAgACAAIAAAAFAAkAAgACAAIAAAAEAAkAAgACAAIAAAAFAAoAAgACAAIAAAAGAAoAAgACAAIAAAAHAAoAAgACAAIAAAANAAoAAgACAAIAAAAOAAoAAgACAAIAAAAIAAsAAgACAAEAAAADAAsAAgACAAEAAAACAAsAAgACAAEAAAAFAAwAAgANAAIAAAAGAAwAAgACAAIAAAAHAAwAAgACAAIAAAAIAAwAAgACAAYAAAAJAAwAAgANAAEAAAAKAAwAAgAMAAIAAAALAAwAAgACAAIAAAAMAAwAAgACAAIAAAANAAwAAgANAAIAAAAOAAwAAgANAAEAAAAEAAwAAgACAAIAAAAAAAUAAgACAAIAAAAAAAYAAgACAAIAAAAAAAcAAgACAAIAAAAAAAkAAgACAAIAAAAAAAoAAgACAAIAAAAAAAsAAgACAAEAAAAAAAwAAgAMAAEAAAABAAAAAgACAAIAAAABAAEAAgACAAIAAAABAAIAAgACAAIAAAABAAMAAgACAAIAAAABAAQAAgACAAIAAAABAAkAAgACAAIAAAABAAoAAgACAAIAAAABAAsAAgACAAEAAAABAAwAAgANAAIAAAACAAAAAgACAAIAAAACAAEAAgACAAIAAAACAAIAAgACAAIAAAACAAQAAgACAAIAAAACAAUAAgACAAIAAAACAAYAAgACAAIAAAACAAkAAgACAAIAAAACAAoAAgACAAIAAAACAAwAAgACAAYAAAADAAAAAgACAAIAAAADAAEAAgACAAIAAAADAAIAAgACAAIAAAADAAUAAgACAAIAAAADAAwAAgANAAEAAAAEAAAAAgACAAIAAAAEAAEAAgACAAIAAAAEAAIAAgACAAIAAAAEAAUAAgACAAIAAAAEAAYAAgACAAIAAAAFAAAAAgACAAIAAAAFAAEAAgACAAIAAAAFAAIAAgACAAIAAAAFAAUAAgACAAIAAAAFAAYAAgACAAIAAAAGAAAAAgACAAIAAAAGAAEAAgACAAIAAAAGAAIAAgACAAIAAAAGAAUAAgACAAIAAAAGAAYAAgACAAIAAAAHAAAAAgACAAIAAAAHAAEAAgACAAIAAAAHAAIAAgACAAIAAAAHAAQAAgACAAIAAAAHAAYAAgACAAIAAAAIAAAAAgACAAIAAAAIAAEAAgACAAIAAAAIAAIAAgACAAIAAAAIAAQAAgACAAIAAAAIAAYAAgACAAIAAAAJAAAAAgACAAIAAAAJAAEAAgACAAIAAAAJAAIAAgACAAIAAAAJAAMAAgACAAIAAAAJAAUAAgACAAIAAAAJAAsAAgACAAEAAAAKAAAAAgACAAIAAAAKAAEAAgACAAIAAAAKAAIAAgACAAIAAAAKAAMAAgACAAIAAAAKAAUAAgACAAIAAAAKAAYAAgACAAIAAAAKAAkAAgACAAIAAAAKAAsAAgACAAEAAAALAAAAAgACAAIAAAALAAEAAgACAAIAAAALAAIAAgACAAIAAAALAAMAAgACAAIAAAALAAUAAgACAAIAAAALAAYAAgACAAIAAAALAAkAAgACAAIAAAALAAsAAgACAAEAAAAMAAAAAgACAAIAAAAMAAEAAgACAAIAAAAMAAIAAgACAAIAAAAMAAMAAgACAAIAAAAMAAUAAgACAAIAAAAMAAYAAgACAAIAAAAMAAkAAgACAAIAAAAMAAsAAgACAAEAAAAMAA0AAgANAAMAAAANAAAAAgACAAIAAAANAAEAAgACAAIAAAANAAIAAgACAAIAAAANAAMAAgACAAIAAAANAAUAAgACAAIAAAANAAYAAgACAAIAAAANAAsAAgACAAEAAAAOAAAAAgACAAIAAAAOAAEAAgACAAIAAAAOAAIAAgACAAIAAAAOAAMAAgACAAIAAAAOAAQAAgACAAIAAAAOAAYAAgACAAIAAAAOAAsAAgACAAEAAAAPAAAAAgACAAIAAAAPAAEAAgACAAIAAAAPAAIAAgACAAIAAAAPAAMAAgACAAIAAAAPAAQAAgACAAIAAAAPAAYAAgACAAIAAAAPAAoAAgACAAIAAAAPAAsAAgANAAMAAAAPAAwAAgAMAAMAAAAQAAAAAgACAAIAAAAQAAEAAgACAAIAAAAQAAIAAgACAAIAAAAQAAMAAgACAAIAAAAQAAQAAgACAAIAAAAQAAUAAgACAAIAAAAQAAcAAgACAAIAAAAQAAkAAgACAAIAAAAQAAoAAgAMAAIAAAAQAAsAAgAMAAMAAAAQAAwAAgAMAAMAAAARAAAAAgACAAIAAAARAAEAAgACAAIAAAARAAIAAgACAAIAAAARAAMAAgACAAIAAAARAAQAAgACAAIAAAARAAUAAgACAAIAAAARAAcAAgACAAIAAAARAAkAAgANAAIAAAARAAoAAgAMAAMAAAARAAsAAgACAAYAAAARAAwAAgAMAAMAAAASAAAAAgACAAIAAAASAAEAAgACAAIAAAASAAIAAgACAAIAAAASAAMAAgACAAIAAAASAAQAAgACAAIAAAASAAUAAgACAAIAAAASAAkAAgANAAMAAAASAAoAAgAMAAIAAAASAAsAAgAMAAIAAAASAAwAAgAMAAMAAAATAAAAAgACAAIAAAATAAEAAgACAAIAAAATAAIAAgACAAIAAAATAAMAAgACAAIAAAATAAQAAgACAAIAAAATAAUAAgACAAIAAAATAAYAAgACAAIAAAATAAcAAgACAAIAAAATAAgAAgANAAMAAAATAAkAAgACAAIAAAATAAoAAgANAAIAAAATAAsAAgAMAAIAAAATAAwAAgAMAAIAAAAUAAAAAgACAAIAAAAUAAEAAgACAAIAAAAUAAIAAgACAAIAAAAUAAMAAgACAAIAAAAUAAQAAgACAAIAAAAUAAUAAgACAAIAAAAUAAYAAgAMAAEAAAAUAAcAAgAMAAMAAAAUAAgAAgAMAAEAAAAUAAkAAgAMAAEAAAAUAAoAAgAMAAEAAAAUAAsAAgANAAEAAAAUAAwAAgANAAEAAAAVAAAAAgACAAIAAAAVAAEAAgACAAIAAAAVAAIAAgACAAIAAAAVAAMAAgACAAIAAAAVAAQAAgACAAIAAAAVAAUAAgACAAIAAAAVAAYAAgANAAEAAAAVAAcAAgACAAYAAAAVAAgAAgACAAIAAAAVAAkAAgACAAYAAAAVAAoAAgAMAAEAAAAVAAsAAgANAAMAAAAVAAwAAgANAAMAAAAWAAAAAgACAAIAAAAWAAEAAgACAAIAAAAWAAIAAgACAAIAAAAWAAMAAgACAAIAAAAWAAQAAgACAAIAAAAWAAUAAgACAAIAAAAWAAYAAgAMAAIAAAAWAAcAAgANAAEAAAAWAAgAAgANAAMAAAAWAAkAAgAMAAIAAAAWAAoAAgANAAEAAAAWAAsAAgANAAIAAAAWAAwAAgANAAEAAAAaAAkAAgAMAAEAAAAXAAAAAgACAAIAAAAXAAEAAgACAAIAAAAXAAIAAgACAAIAAAAXAAMAAgACAAIAAAAXAAQAAgACAAIAAAAXAAUAAgACAAIAAAAXAAYAAgANAAEAAAAXAAcAAgAMAAEAAAAXAAgAAgANAAMAAAAXAAkAAgANAAIAAAAXAAoAAgANAAMAAAAXAAsAAgANAAMAAAAXAAwAAgACAAIAAAADAAQAAgACAAIAAAADAAYAAgACAAIAAAADAAcAAgACAAIAAAAEAAcAAgACAAIAAAA=")
tile_set = ExtResource("2_qgo02")

[node name="bkgFloor" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAPAAoAAgAFAAEAAAAQAAkAAgAFAAEAAAARAAgAAgAFAAEAAAASAAcAAgAFAAEAAAATAAYAAgAFAAEAAAAUAAYAAgACAAEAAAAVAAYAAgACAAEAAAAWAAYAAgACAAEAAAAXAAYAAgACAAEAAAAYAAYAAgACAAEAAAAZAAYAAgACAAEAAAAaAAYAAgACAAEAAAAPAAsAAgAFAAIAAAAQAAoAAgAFAAIAAAARAAkAAgAFAAIAAAASAAgAAgAFAAIAAAATAAcAAgAFAAIAAAATAAoAAgAMAAIAAAATAAsAAgAMAAMAAAAUAAoAAgAMAAMAAAAUAAsAAgANAAIAAAALAAwAAgAKAAMAAAALAA0AAgAKAAQAAAAMAAwAAgALAAMAAAAMAA0AAgALAAQAAAADAAwAAgAKAAMAAAADAA0AAgAKAAQAAAAEAAwAAgALAAMAAAAEAA0AAgALAAQAAAAHAAwAAgAKAAMAAAAHAA0AAgAKAAQAAAAIAAwAAgALAAMAAAAIAA0AAgALAAQAAAABAAcAAgAKAAEAAAABAAgAAgAKAAIAAAACAAcAAgALAAEAAAACAAgAAgALAAIAAAAFAAcAAgAKAAEAAAAFAAgAAgAKAAIAAAAGAAcAAgALAAEAAAAGAAgAAgALAAIAAAAJAAcAAgAKAAEAAAAJAAgAAgAKAAIAAAAKAAcAAgALAAEAAAAKAAgAAgALAAIAAAANAAcAAgAKAAEAAAANAAgAAgAKAAIAAAAOAAcAAgALAAEAAAAOAAgAAgALAAIAAAAUAAIAAgAKAAEAAAAUAAMAAgAKAAIAAAAVAAIAAgALAAEAAAAVAAMAAgALAAIAAAAXAAIAAgAKAAEAAAAXAAMAAgAKAAIAAAAYAAIAAgALAAEAAAAYAAMAAgALAAIAAAAAAAQAAgACAAMAAAABAAQAAgACAAMAAAACAAQAAgACAAMAAAACAAMAAgADAAIAAAABAAUAAgACAAwAAAAFAAoAAgABAA4AAAAGAAoAAgADAA4AAAAHAAoAAgADAA4AAAAEAAoAAgAFAA4AAAACAAoAAgAEAA0AAAADAAoAAgAFAA0AAAAUAAUAAgADAA4AAAAVAAUAAgAGAA0AAAABAAoAAgAKAAwAAAAAAAoAAgAKAAoAAAAAAAkAAgAKAAoAAAAAAAgAAgAMAAkAAAANAAoAAgAHAAoAAAAGAAEAAgAFAAgAAAACAAIAAgADAAIAAAACAAEAAgAGAAMAAAADAAEAAgADAAMAAAACAAAAAgACAAIAAAADAAAAAgADAAIAAAABAAMAAgAGAAMAAAADAAIAAgANAA4AAAABAAYAAgACAA0AAAA=")
tile_set = ExtResource("2_qgo02")

[node name="Label" type="Label" parent="."]
offset_left = 323.0
offset_top = 34.0
offset_right = 1156.0
offset_bottom = 303.0
text = "Jump Knight"
label_settings = SubResource("LabelSettings_1k4da")

[node name="ButtonManager" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="play" type="TextureButton" parent="ButtonManager"]
layout_mode = 0
offset_left = 656.0
offset_top = 248.0
offset_right = 672.0
offset_bottom = 264.0
scale = Vector2(10, 10)
texture_normal = ExtResource("2_3rkf3")
texture_hover = ExtResource("3_hj162")

[node name="options" type="TextureButton" parent="ButtonManager"]
layout_mode = 0
offset_left = 674.0
offset_top = 424.0
offset_right = 690.0
offset_bottom = 440.0
scale = Vector2(8, 8)
toggle_mode = true
texture_normal = ExtResource("6_d4hu8")
texture_pressed = ExtResource("8_prbor")
texture_hover = ExtResource("7_p1nwe")

[node name="exit" type="TextureButton" parent="ButtonManager"]
layout_mode = 0
offset_left = 674.0
offset_top = 568.0
offset_right = 690.0
offset_bottom = 584.0
scale = Vector2(8, 8)
texture_normal = ExtResource("4_hj162")
texture_hover = ExtResource("8_vovv2")

[node name="buttonHoverSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_1k4da")
volume_db = -20.0

[node name="mainMenuMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_bbqo6")
volume_db = -40.0

[connection signal="pressed" from="ButtonManager/play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="ButtonManager/options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="ButtonManager/exit" to="." method="_on_exit_pressed"]
